update popup ( fix button overlap )_folk

--- a/client/src/components/Popup.css
+++ b/client/src/components/Popup.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
+
 * {
     font-family: "Roboto", sans-serif;
 }
@@ -73,19 +74,19 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 110%;
     background-color: rgba(0, 0, 0, 0.2);
-
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9999; 
 }
 
 .popup-inner {
     position: relative;
-    padding: 32px;
-    width: 100%;
-    max-width: 1000px;
+    padding: 16px;
+    width: 80%;
+    max-width: 800px;
     background-color: #FFF;
 }
 
